openssl (0.9.8h-6.syslogng32.1) syslogngdeps20; urgency=low

  * MD5 amd64 assembly code generator now works.
  * Fixed AIX linking.
  * Runs make test after building.

 -- Tamas Pal <folti@balabit.com>  Wed, 29 Sep 2010 11:17:17 +0200

openssl (0.9.8h-6.syslogng31) syslogngdeps10; urgency=low

  * Works with syslog-ng-3.1 release system.

 -- Andras Tevesz <ghost@balabit.com>  Mon, 08 Mar 2010 15:15:53 +0100

openssl (0.9.8h-5.syslogng30) syslogngdeps10; urgency=low

  * Works with syslog-ng-3.1 release system.

 -- Tamas Pal <folti@balabit.com>  Tue, 03 Nov 2009 15:09:40 +0100

openssl (0.9.8h-4.syslogng30) syslogng31; urgency=low

  * SECURITY UPDATE: Added Ubuntu patch to fix CVE-2008-5077.

 -- Tamas Pal <folti@balabit.com>  Thu, 08 Jan 2009 17:51:32 +0100

openssl (0.9.8h-3.syslogng30) syslogng30; urgency=low

  * Fixed Packaging for AIX.
  * Bumped version 0.9.8h-3.syslogng31

 -- Tamas Pal <folti@balabit.com>  Wed, 01 Oct 2008 18:21:56 +0200

openssl (0.9.8h-2.syslogng30) syslogng30; urgency=low

  * Simplified the configure part and fixed the prefix,
    now using INSTALL_PREFIX.

 -- ZorpOS Maintainers <zorpos@balabit.com>  Thu, 31 Jul 2008 14:14:54 +0200

openssl-syslog-ng (0.9.8h-1) unstable; urgency=low

  * Support for multi arctitecture for solaris and linux-generic.

 -- ZorpOS Maintainers <zorpos@balabit.com>  Tue, 29 Jul 2008 13:36:45 +0200

openssl-syslog-ng (0.9.8h) unstable; urgency=low

  * Initial tgz2build package. 

 -- ZorpOS Maintainers <zorpos@balabit.com>  Fri, 18 Jul 2008 15:47:20 +0200